--- a/config/PGNN_KITTI.yaml
+++ b/config/PGNN_KITTI.yaml
@@ -1,9 +1,9 @@
 # dataset
-path: H:/E_extension/dataset/kitti
+path: ../dataset/kitti
 dataset: kitti
 point_dim: 3
 train_split: train
-valid_split: valid tiny
+valid_split: valid
 test_split: test tiny
 coordinate_mode: velodyne
 
@@ -16,14 +16,16 @@ search_size: 1024
 workers: 12
 box_enlarge_scale: 1.25
 
+# model
+backbone: dgn
+
 # train
 checkpoint: ./checkpoint
-batch_size: 4
+batch_size: 8
 epoch: 200
 pretrain:
 optimizer: adam
-lr: 0.0001
-wd: 0.00001
+lr: 0.001
 check_val_every_n_epoch: 1
 save_last: True
 use_fps: True
@@ -31,6 +33,6 @@ normalize_xyz: True
 
 # loss
 object_weight: 1.5
-box_weight: 1
+box_weight: 0.2
 vote_weight: 1.0
-seg_weight: 1
+seg_weight: 0.2
