--- a/config/PGNN_KITTI.yaml
+++ b/config/PGNN_KITTI.yaml
@@ -1,6 +1,7 @@
 # dataset
 path: ../dataset/kitti
 dataset: kitti
+category_name: Cyclist  # ['Car', 'Van', 'Pedestrian', 'Cyclist']
 point_dim: 3
 train_split: train
 valid_split: valid
@@ -16,9 +17,13 @@ search_size: 1024
 workers: 12
 box_enlarge_scale: 1.25
 
+random_sample: False
+num_candidates: 1
+
 # model
-use_repSurf: True
+use_repSurf: False
 backbone: dgn
+dgn_k: 5
 
 # train
 checkpoint: ./checkpoint
@@ -28,7 +33,7 @@ pretrain:
 optimizer: adam
 lr: 0.001
 check_val_every_n_epoch: 1
-save_last: True
+save_last: False
 use_fps: True
 normalize_xyz: True
 
